--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         ],
         "quotes": [
             2,
-            "double"
+            "single"
         ],
         "linebreak-style": [
             2,
@@ -85,6 +85,10 @@
     "env": {
         "es6": true,
         "browser": true
+    },
+	"parserOptions": {
+       "ecmaVersion": 8,
+       "sourceType": "module"
     },
     "extends": "eslint:recommended"
 }
