Add missing babel preset

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 	],
 	"scripts": {
 		"lint": "eslint .",
-		"build": "parcel build --out-file artemis.min.js index.js "
+		"build": "parcel build --out-file artemis.min.js index.js"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
 		"eslint": "^4.19.1",
 		"jsdoc": "^3.5.5"
 	}
