--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "Aegis Framework Javascript Library",
 	"main": "index.js",
 	"repository": "https://github.com/AegisFramework/Artemis.git",
-	"homepage": "http://aegisframework.com/",
+	"homepage": "https://aegisframework.com/",
 	"author": "Diego Islas Ocampo <dev@hyuchia.com>",
 	"license": "MIT",
+	"main": "./index.js",
 	"keywords": [
 		"artemis",
 		"dom",
@@ -15,12 +16,20 @@
 	],
 	"scripts": {
 		"lint": "eslint index.js lib",
-		"build": "parcel build --out-file artemis.min.js index.js"
+		"build": "webpack"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
+		"babel-plugin-transform-es2015-modules-umd": "^6.24.1",
 		"babel-preset-env": "^1.7.0",
 		"eslint": "^4.19.1",
-		"jsdoc": "^3.5.5"
-	}
+		"jsdoc": "^3.5.5",
+		"webpack": "^4.12.0",
+		"webpack-cli": "^3.0.3"
+	},
+	"files": [
+		"index.js",
+		"src/*",
+		"dist/*"
+	]
 }
