--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@aegis-framework/artemis",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"description": "Aegis Framework Javascript Library",
 	"main": "./dist/artemis.min.js",
+	"module": "./index.js",
 	"repository": "https://github.com/AegisFramework/Artemis.git",
 	"homepage": "https://aegisframework.com/",
 	"author": "Diego Islas Ocampo <dev@hyuchia.com>",
@@ -20,13 +21,14 @@
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
+		"babel-plugin-add-module-exports": "^0.2.1",
 		"babel-plugin-transform-es2015-modules-umd": "^6.24.1",
 		"babel-preset-env": "^1.7.0",
 		"eslint": "^4.19.1",
 		"jsdoc": "^3.5.5",
 		"jsdoc-to-markdown": "^4.0.1",
 		"webpack": "^4.12.0",
-		"webpack-cli": "^3.0.3"
+		"webpack-cli": "^3.0.6"
 	},
 	"files": [
 		"index.js",
