--- a/package.json
+++ b/package.json
@@ -17,18 +17,15 @@
 	"scripts": {
 		"eslint": "eslint index.js src",
 		"jsdoc": "jsdoc ./src -c ./.jsdoc.json && jsdoc2md -f ./src/* -c ./.jsdoc.json >> ./docs/README.md",
-		"build": "webpack"
+		"build": "parcel build ./index.js --global Artemis --out-file artemis.min.js"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
-		"babel-plugin-add-module-exports": "^0.2.1",
-		"babel-plugin-transform-es2015-modules-umd": "^6.24.1",
 		"babel-preset-env": "^1.7.0",
 		"eslint": "^4.19.1",
 		"jsdoc": "^3.5.5",
 		"jsdoc-to-markdown": "^4.0.1",
-		"webpack": "^4.12.0",
-		"webpack-cli": "^3.0.6"
+		"parcel": "^1.9.0"
 	},
 	"files": [
 		"index.js",
