--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.3.8",
 	"description": "Aegis Framework Javascript Library",
 	"main": "./dist/artemis.min.js",
+	"module": "./index.js",
 	"repository": {
 		"type": "git",
 		"url": "https://gitlab.com/AegisFramework/Artemis.git"
