--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@aegis-framework/artemis",
-	"version": "0.3.8",
+	"version": "0.3.9",
 	"description": "Aegis Framework Javascript Library",
 	"main": "./dist/artemis.min.js",
 	"module": "./index.js",
@@ -23,7 +23,7 @@
 	"scripts": {
 		"eslint": "eslint index.js src",
 		"jsdoc": "jsdoc ./src -c ./.jsdoc.json && jsdoc2md -f ./src/* -c ./.jsdoc.json >> ./docs/README.md",
-		"build": "parcel build ./index.js --global Artemis --out-file artemis.min.js --no-cache"
+		"build": "parcel build ./index.js --global Artemis --out-file artemis.min.js --no-cache --public-url ."
 	},
 	"devDependencies": {
 		"eslint": "^5.10.0",
