--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@aegis-framework/artemis",
-	"version": "0.3.18",
+	"version": "0.3.19",
 	"description": "Aegis Framework Javascript Library",
 	"main": "./dist/artemis.min.js",
 	"module": "./index.js",
@@ -23,17 +23,25 @@
 	"scripts": {
 		"eslint": "eslint index.js src",
 		"jsdoc": "jsdoc ./src -c ./.jsdoc.json && jsdoc2md -f ./src/* -c ./.jsdoc.json >> ./docs/README.md",
-		"build": "parcel build ./index.js --global Artemis --out-file artemis.min.js --no-cache --public-url ."
+		"build": "parcel build ./index.js --global Artemis --out-file artemis.min.js --no-cache --public-url .",
+		"watch": "parcel watch ./index.js --global Artemis --out-file artemis.min.js --no-cache --public-url ."
 	},
 	"devDependencies": {
-		"eslint": "^5.12.0",
+		"@babel/core": "^7.4.3",
+		"eslint": "^5.16.0",
 		"jsdoc": "^3.5.5",
 		"jsdoc-to-markdown": "^4.0.1",
-		"parcel": "^1.11.0"
+		"parcel": "^1.12.3"
 	},
 	"files": [
 		"index.js",
 		"src/*",
 		"dist/*"
+	],
+	"dependencies": {
+		"@babel/plugin-proposal-object-rest-spread": "^7.4.3"
+	},
+	"browserslist": [
+		"> 5%"
 	]
 }
