Migrate to typescript

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ package-lock.json
 *.log
 .vscode
 .parcel-cache
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
